fixing a lot of glaring css problems like hue degrees, box shadow and some spacing

--- a/public/_scss/_ContentComponent.scss
+++ b/public/_scss/_ContentComponent.scss
@@ -79,7 +79,7 @@
 
       &:hover {
         img {
-          filter: hue-rotate(45deg);
+          filter: hue-rotate(-45deg);
           transition: $trans--long-in;
         }
       }
