--- a/public/_scss/_base.scss
+++ b/public/_scss/_base.scss
@@ -60,10 +60,6 @@ body {
       max-width: 25em;
       margin: auto;
     }
-
-    img {
-      box-shadow: 1px 0 6px 1px rgba(0, 0, 0, 0.1);
-    }
   }
 }
 
